--- a/ourteam.html
+++ b/ourteam.html
@@ -330,10 +330,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-1.jpg" alt="Doris Jordan">
+                    <img src="images/team-1.jpg" alt="kanksha Deshmukh">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Doris Jordan</h4>
+                    <h4 class="mb-0">Akanksha Deshmukh</h4>
                     <p class="text-primary">Landscape Designer</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
@@ -347,10 +347,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-2.jpg" alt="Johnny Ramirez">
+                    <img src="images/team-2.jpg" alt="Dinesh Mahajan">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Johnny Ramirez</h4>
+                    <h4 class="mb-0">Dinesh Mahajan</h4>
                     <p class="text-primary">Garden Designer</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
@@ -365,10 +365,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-3.jpg" alt="Diana Wagner">
+                    <img src="images/team-3.jpg" alt="Mayura Roy">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Diana Wagner</h4>
+                    <h4 class="mb-0">Mayura Roy</h4>
                     <p class="text-primary">Senior Gardener</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
