--- a/about.html
+++ b/about.html
@@ -212,7 +212,6 @@
   background-color: #f9fefb;
   transition: transform 0.3s ease;
 }
-
 /* Image container */
 .team-img {
   position: relative;
@@ -221,7 +220,7 @@
 /* Team member image */
 .team-img img {
   width: 100%;
-  height: 80%;
+  height: 100%;
   object-fit: cover;
   transition: transform 0.5s ease;
   border-radius: 0;
@@ -494,10 +493,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-1.jpg" alt="Doris Jordan">
+                    <img src="images/team-1.jpg" alt="Dinesh Mahajan">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Doris Jordan</h4>
+                    <h4 class="mb-0">Akanksha Deshmukh</h4>
                     <p class="text-primary">Landscape Designer</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
@@ -511,10 +510,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-2.jpg" alt="Johnny Ramirez">
+                    <img src="images/team-2.jpg" alt="Akanksha Deshmukh">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Johnny Ramirez</h4>
+                    <h4 class="mb-0">Dinesh Mahajan</h4>
                     <p class="text-primary">Garden Designer</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
@@ -528,10 +527,10 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item rounded">
                 <div class="team-img">
-                    <img src="images/team-3.jpg" alt="Diana Wagner">
+                    <img src="images/team-3.jpg" alt="Akash Ghadge">
                 </div>
                 <div class="team-text">
-                    <h4 class="mb-0">Diana Wagner</h4>
+                    <h4 class="mb-0">Mayura Roy</h4>
                     <p class="text-primary">Senior Gardener</p>
                     <div class="team-social d-flex justify-content-center">
                         <a class="btn btn-square rounded-circle me-2" href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
