--- a/index.html
+++ b/index.html
@@ -1375,8 +1375,7 @@
                             At lorem lorem magna ut et, nonumy et labore et
                             tempor diam tempor erat
                           </p>
-                          <h5 class="fw-bold text-success mb-0">Ethan
-                            Walker</h5>
+                          <h5 class="fw-bold text-success mb-0">Rahul Shinde</h5>
                           <small class="text-muted">Profession</small><br>
                           <span class="text-warning fs-5">★ ★ ★ ★ ☆</span>
                           <span class="fw-bold ms-2 text-success">4.4</span>
@@ -1399,8 +1398,7 @@
                             lorem ipsum tempor.
                             Tempor erat elitr at dolor amet sit justo.
                           </p>
-                          <h5 class="fw-bold text-success mb-0">Another
-                            Client</h5>
+                          <h5 class="fw-bold text-success mb-0">Chandani Dsouza</h5>
                           <small class="text-muted">Profession</small><br>
                           <span class="text-warning fs-5">★ ★ ★ ★ ☆</span>
                           <span class="fw-bold ms-2 text-success">4.1</span>
