--- a/reviews.html
+++ b/reviews.html
@@ -276,7 +276,7 @@
                       Magna est erat clita dolores et rebum. Stet labore lorem ipsum tempor.
                       Tempor erat elitr at dolor amet sit justo.
                     </p>
-                    <h5 class="fw-bold text-success mb-0">Priyanka Jadhav</h5>
+                    <h5 class="fw-bold text-success mb-0">Chandani Dsouza</h5>
                     <small class="text-muted">Profession</small><br>
                     <span class="text-warning fs-5">★ ★ ★ ★ ☆</span>
                     <span class="fw-bold ms-2 text-success">4.1</span>
