--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Mind Garden | Index</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -1447,16 +1447,16 @@
                 <p><i
                     class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
                 <div class="d-flex gap-2">
-              <a href="https://twitter.com"
+              <a href="https://twitter.com" target="_blank"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-twitter"></i></a>
-              <a href="https://facebook.com"
+              <a href="https://facebook.com" target="_blank"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-facebook"></i></a>
-              <a href="https://youtube.com"
+              <a href="https://youtube.com" target="_blank"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-youtube"></i></a>
-              <a href="https://instagram.com"
+              <a href="https://instagram.com" target="_blank"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-instagram"></i></a>
             </div>
@@ -1497,19 +1497,19 @@
               <div class="col-md-4 mb-4">
                 <h5 class="fw-bold mb-4">Quick Links</h5>
                 <ul class="list-unstyled">
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="about.html"
                       class="text-white text-decoration-none">About</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Services</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="projects.html"
                       class="text-white text-decoration-none">Projects
                     </a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="features.html"
                       class="text-white text-decoration-none">Features</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="feedback.html"
                       class="text-white text-decoration-none">Feedback
                       Form</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="contact.html"
                       class="text-white text-decoration-none">Contact
                       US</a></li>
                 </ul>
