--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects - The Mind Garden</title>
+    <title>The Mind Garden | project</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -616,10 +616,10 @@
             <p><i
                 class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
             <div class="d-flex gap-2">
-                  <a href="https://twitter.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-twitter"></i></a>
-                  <a href="https://facebook.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-facebook"></i></a>
-                  <a href="https://youtube.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-youtube"></i></a>
-                  <a href="https://instagram.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com" target="_blank" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" target="_blank" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" target="_blank" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" target="_blank" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
                 </div>
           </div>
 
@@ -650,25 +650,25 @@
 
           <!-- Quick Links -->
           <div class="col-md-4 mb-4">
-            <h5 class="fw-bold mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">About</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Services</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Projects
-                </a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Features</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Feedback
-                  Form</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Contact
-                  US</a></li>
-            </ul>
-          </div>
+                <h5 class="fw-bold mb-4">Quick Links</h5>
+                <ul class="list-unstyled">
+                  <li><span class="text-success">›</span> <a href="about.html"
+                      class="text-white text-decoration-none">About</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Services</a></li>
+                  <li><span class="text-success">›</span> <a href="projects.html"
+                      class="text-white text-decoration-none">Projects
+                    </a></li>
+                  <li><span class="text-success">›</span> <a href="features.html"
+                      class="text-white text-decoration-none">Features</a></li>
+                  <li><span class="text-success">›</span> <a href="feedback.html"
+                      class="text-white text-decoration-none">Feedback
+                      Form</a></li>
+                  <li><span class="text-success">›</span> <a href="contact.html"
+                      class="text-white text-decoration-none">Contact
+                      US</a></li>
+                </ul>
+              </div>
 
         </div>
       </div>
