--- a/index.html
+++ b/index.html
@@ -526,54 +526,54 @@
 
     <!-- Slider start -->
     <section>
-      <div id="carouselExampleDark" class="carousel carousel-dark slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide-to="0" class="active" aria-current="true"
-            aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide-to="1" aria-label="Slide 2"></button>
+  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide-to="1" aria-label="Slide 2"></button>
+    </div>
+
+    <!-- Slides -->
+    <div class="carousel-inner">
+      <!-- Slide 1 -->
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="images/baner2.jpg" alt="Gardener Banner" class="w-100"
+          style="height: auto; max-height: 600px; object-fit: cover;">
+        <div class="overlay"></div>
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="slider-h fw-bold mb-5">Make Your Home Like <br> Garden</h1>
+          <a href="about.html" class="btn btn-success btn-lg">Explore More</a>
         </div>
+      </div>
 
-        <div class="carousel-inner">
-          <!-- Slide 1 -->
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="images/baner2.jpg" alt="Gardener Banner" class="w-100"
-              style="height: auto; max-height: 600px; object-fit: cover;">
-            <div class="overlay"></div>
-            <div
-              class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-              <h1 class="slider-h fw-bold mb-5">Make Your Home Like <br>
-                Garden</h1>
-              <a href="about.html" class="btn btn-success btn-lg">Explore More</a>
-            </div>
-          </div>
-
-          <!-- Slide 2 -->
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="images/baner1.jpg" alt="Gardener Banner" class="w-100"
-              style="height: auto; max-height: 600px; object-fit: cover;">
-            <div class="overlay"></div>
-            <div
-              class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-              <h1 class="slider-h fw-bold mb-5">Bring Nature Into <br> Your
-                Life</h1>
-              <a href="about.html" class="btn btn-success btn-lg">Explore More</a>
-            </div>
-          </div>
-
-          <button class="carousel-control-prev" type="button"
-            data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button"
-            data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+      <!-- Slide 2 -->
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="images/baner1.jpg" alt="Gardener Banner" class="w-100"
+          style="height: auto; max-height: 600px; object-fit: cover;">
+        <div class="overlay"></div>
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="slider-h fw-bold mb-5">Bring Nature Into <br> Your Life</h1>
+          <a href="about.html" class="btn btn-success btn-lg">Explore More</a>
         </div>
-      </section>
+      </div>
+    </div>
+
+    <!-- Navigation Buttons (Outside carousel-inner) -->
+    <button class="carousel-control-prev" type="button"
+      data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button"
+      data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+
 
       <main>
 
